<resources>
    <string name="app_name">Walmart</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="email_addres_required">Email addres(required)</string>
    <string name="password_required">Password(required)</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="create_your_account">Create your account</string>
    <string name="required_field">*required field</string>
    <string name="first_name">First name*</string>
    <string name="last_name">Last name*</string>
    <string name="email_address">Email address*</string>
    <string name="password">Password*</string>
    <string name="create_account">Create account</string>
    <string name="shop_by_categories">Shop By Categories</string>
</resources>