<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Register">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="0dp"
        android:src="@drawable/walmartlogo" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp"
        />

    <TextView

        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_your_account"
        android:textSize="35sp"
        android:layout_marginStart="20dp"
        />
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"
        />
    <TextView

        android:id="@+id/tv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/required_field"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        />
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"
        />
    <TextView
        android:id="@+id/tv3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
         />

    <EditText
        android:id="@+id/et1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:inputType="text"
        android:focusable="true"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"
        />
    <TextView
        android:id="@+id/tv4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:textSize="20sp"
        android:layout_marginStart="20dp"

        />

    <EditText
        android:id="@+id/et2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:inputType="text"
        />
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"
        />
    <TextView
        android:id="@+id/tv5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/email_address"
        android:textSize="20sp"


        />
    <EditText
        android:id="@+id/et3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:inputType="textEmailAddress"
        />
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"
        />
    <TextView
        android:id="@+id/tv6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/password"
        android:textSize="20sp"


        />
    <EditText
        android:id="@+id/et4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:inputType="textPassword"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"
        />

    <Button
        android:id="@+id/btn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:layout_marginStart="20dp"
        android:textColor="#2196F3"
        android:onClick="createUser"

        />


    </LinearLayout>
</ScrollView>