<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:ignore="ExtraText">
    android:paddingLeft="24dp"
    android:paddingTop="20dp"
    android:paddingRight="24dp">

    <ImageView
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="0dp"
        android:src="@drawable/walmartlogo" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <TextView

        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/sign_in_to_your_account"
        android:textSize="35sp"
        android:focusable="true"/>


    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:inputType="text"
        android:text="@string/email_addres_required"
        android:textSize="20sp"
        tools:ignore="TextViewEdits" />

    <EditText
        android:id="@+id/et1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:inputType="textEmailAddress"
        android:focusable="true"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/password_required"
        android:textSize="20sp"

        />

    <EditText
        android:id="@+id/et2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/tv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="220dp"
        android:autoLink="all"
        android:clickable="true"
        android:onClick="getPassword"
        android:text="@string/forgot_password"
        android:textSize="20sp"

        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:background="#2196F3"
        android:layout_marginEnd="10dp"
        android:onClick="login"
        android:text="@string/sign_in"
        android:textSize="25sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="12dp"
        android:background="@android:color/black" />

    <TextView
        android:id="@+id/tv5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:padding="2dp"
        android:background="@color/white"
        android:layout_centerHorizontal="true"
        android:text="@string/don_t_have_an_account"
        android:textSize="20sp" />

    </RelativeLayout>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:padding="12dp"
        android:onClick="createAccount"
        android:text="@string/create_a_new_account"
        android:backgroundTint="@color/white"
        android:textColor="#2196F3"
        android:textSize="16sp" />

        />

</LinearLayout>
</ScrollView>